maze.lessons.maze.island.IslandMaze.scala.error
Escaper:76: error: Unmatched closing brace '}' ignored here
}
^